# garden-scrapy

./: .gitignore  pyproject.toml
sgscraper/: main.py  scrapy.cfg
sgscraper/sgscraper/: items.py  middlewares.py  pipelines.py  settings.py
sgscraper/sgscraper/spiders/: sg.py
