[tool.poetry]
name = "garden-scrapy"
version = "0.1.0"
description = ""
authors = ["Sergey <spushkovskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
